fixes contrast

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  /* fixes contrast */
+  background-color: rgb(219, 219, 219);
   margin: 0;
   padding: 0;
 }
